--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,18 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    minSdkVersion = 24
+    targetSdkVersion = 27
+    compileSdkVersion = 27
+
+    supportLibraryVersion = '27.1.0'
+    junitVersion = '4.12'
+    runnerVersion = '1.0.1'
+    espressoVersion = '3.0.1'
+    guavaVersion = '23.0-android'
+
+    roomVersion = "1.1.0-alpha2"
+    archLifecycleVersion = "1.1.0"
+}
